# coffer

./: .gitignore  FRONTEND_TODO.md  GETTING_STARTED.md  PLAID_SETUP_GUIDE.md  PROJECT_SUMMARY.md  README.md  package.json  pyproject.toml  requirements.txt
pages/: index.js
pages/api/: todos.js
public/: manifest.json
src/finance_tracker/: __init__.py  config.py  database.py  encryption.py  main.py  models.py  scheduler.py
src/finance_tracker/parsers/: __init__.py  apple.py  base.py  chase.py  venmo.py
src/finance_tracker/routers/: categories.py  dashboard.py  imports.py  plaid.py  transactions.py
src/finance_tracker/services/: analytics_service.py  category_service.py  import_service.py  plaid_service.py  sync_service.py
src/finance_tracker/templates/: base.html  dashboard.html
src/finance_tracker/templates/categories/: list.html
src/finance_tracker/templates/imports/: _result.html  upload.html
src/finance_tracker/templates/plaid/: connections.html
src/finance_tracker/templates/transactions/: list.html
static/css/: style.css
static/js/: charts.js
styles/: globals.css
tests/: __init__.py  conftest.py
tests/test_parsers/: test_chase.py
